update git ignore, to ignore caches

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,7 @@
-raidlogs/config.py
+# Byte-compiled / optimized / DLL files
+__pycache__/
+*.py[cod]
+*$py.class
+
+# Config file with api key
+*/config.py
